--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -14,3 +14,10 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.sun.springcloud.entities  # 所有Entity别名类所在包
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:7001/eureka
+    register-with-eureka: true # 表示是否将自己注册进eurekaServer 默认为true
+    fetch-registry: true # 是否从eureka server 抓取已有的注册信息，默认为tre，单店无所谓，集群必须设置为true 才能配合ribbon 使用负载均衡
