--- a/cloud-eureka-server7001/pom.xml
+++ b/cloud-eureka-server7001/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-eureka-server7002</artifactId>
-
+    <artifactId>cloud-eureka-server7001</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
