--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -9,4 +9,8 @@ eureka:
     service-url:
       # 设置与Eureka Server 交互的地址查询服务 和注册服务都需要依赖这个地址
       defaultZone: http://eureka7002.com:7002/eureka/
-
+  server:
+    # 关闭自我保护模式，保证不可用服务被及时删除
+    enable-self-preservation: false
+    # 心跳断开时间
+    eviction-interval-timer-in-ms: 2000
