--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -19,12 +19,12 @@ eureka:
   client:
     service-url:
        #单机版
-      defaultZone: http://localhost:7001/eureka
+      defaultZone: http://localhost:7001/eureka,http://eureka7002.com:7002/eureka/
       #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
     register-with-eureka: true # 表示是否将自己注册进eurekaServer 默认为true
     fetch-registry: true # 是否从eureka server 抓取已有的注册信息，默认为tre，单店无所谓，集群必须设置为true 才能配合ribbon 使用负载均衡
   instance:
     instance-id: payment8001 # 实例的名称
     prefer-ip-address: true # 是否展示实例的ip地址
-    lease-renewal-interval-in-seconds: 1 # Eureka 客户端向服务端发送心跳的实际间隔，单位为秒（默认为 30 秒）
-    lease-expiration-duration-in-seconds: 2  # Eureka 服务端收到最后一次心跳后等待时间上线,单位为秒（默认为 90 秒） 超时将剔除服务
+    # lease-renewal-interval-in-seconds: 1 # Eureka 客户端向服务端发送心跳的实际间隔，单位为秒（默认为 30 秒）
+    # lease-expiration-duration-in-seconds: 2  # Eureka 服务端收到最后一次心跳后等待时间上线,单位为秒（默认为 90 秒） 超时将剔除服务
